# Tag_FW_Chroma

./: .gitignore  .gitmodules  README.md
Chroma_Tag_FW/: .gitignore
Chroma_Tag_FW/OEPL/: Makefile  main.c  parse_map.py  powermgt.c  powermgt.h  release_all.py  syncedproto.c  syncedproto.h  update_vpj.sh  userinterface.c  userinterface.h
Chroma_Tag_FW/add_ota_hdr/: CMakeLists.txt  add_ota_hdr.c  crc32.c
Chroma_Tag_FW/board/: boardChroma.c  boardCommon.h
Chroma_Tag_FW/board/chroma29/: board.c  board.h  drawing.c  make.mk  screen.c  screen.h  screen_8151.c
Chroma_Tag_FW/board/chroma42/: board.c  board.h  drawing.c  screen.c  screen.h  screen_8176.c
Chroma_Tag_FW/board/chroma74/: board.c  board.h  drawing.c  screen.c  screen.h
Chroma_Tag_FW/board/epop900/: board.c  board.h  make.mk  screen.c  screen.h
Chroma_Tag_FW/common/: adc.h  barcode.c  barcode.h  bitmaps.h  comms.c  comms.h  draw_common.c  draw_common.h  drawing.h  eeprom.c  eeprom.h  logging.h  ota_hdr.h  packed_font.h  radioCommon.h  settings.c  settings.h  wdt.h
Chroma_Tag_FW/cpu/8051/: make.mk  printf.c  uart.h
Chroma_Tag_FW/make/: common.mk  rules.mk
Chroma_Tag_FW/mkfont/: CMakeLists.txt  bahnschrift20.h  bahnschrift30.h  calibrib16.h  calibrib30.h  mkfont.c  refsan12.h  tahoma9.h  twcondensed20.h
Chroma_Tag_FW/patch_sn/: patch_sn.py  requirements.txt
Chroma_Tag_FW/soc/cc111x/: adc.c  aes.c  cc111x.h  make.mk  radio.c  radio.h  sleep.c  (+7 more)
vs/: .gitignore  chroma29_8151_OEPL.vpj  chroma29_OEPL.vpj  chroma42_8176_OEPL.vpj  chroma42_OEPL.vpj  chroma42_OPEL.vpj  chroma74y_OEPL.vpj  mkfont.vpj
